--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         display: block;
         width: 4px;
         height: 25px;
-        background-color: yellow;
+        background-color: orange;
         position: absolute;
         /* left: 20; */
         /* padding: 0px;
@@ -38,7 +38,7 @@
         display: block;
         width: 4px;
         height: 25px;
-        background-color: yellow;
+        background-color: orange;
         position: absolute;
       }
 
@@ -47,7 +47,7 @@
         display: block;
         width: 4px;
         height: 15px;
-        background-color: yellow;
+        background-color: orange;
         position: absolute;
       }
 
@@ -64,7 +64,7 @@
   <body>
     <main>
       <div>
-        <h1>Frequently asked questions</h1>
+        <h1>Frequently Asked Questions</h1>
         <details>
           <summary
             >How do i get a copy of my ticket for my expense report</summary
