--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         margin: 20px;
       }
       details {
-        padding: 25px;
+        padding: 10px;
         border-style: groove;
         margin: 20px;
       }
@@ -54,7 +54,7 @@
       div {
         position: relative;
         /* background-color: blue; */
-        max-width: 500px;
+        max-width: 550px;
         width: 100vh;
         height: 100%;
         margin: 0 auto;
@@ -67,7 +67,7 @@
         <h1>Frequently Asked Questions</h1>
         <details>
           <summary
-            >How do i get a copy of my ticket for my expense report</summary
+            >How do i get a copy of my ticket for my expense report?</summary
           >
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam libero
@@ -76,7 +76,7 @@
           </p>
         </details>
         <details>
-          <summary>How can i get a refund</summary>
+          <summary>How can i get a refund?</summary>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam libero
             obcaecati fuga ratione recusandae mollitia facere ipsa laborum,
