font weight&border

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         font-family: sans-serif;
       }
       h1 {
-        font-style: normal;
+        font-weight: 200;
         margin: 20px;
       }
       details {
         padding: 10px;
-        border-style: groove;
+        border: solid rgba(182, 178, 178, 0.726) 1px;
         margin: 20px;
       }
       summary {
